# HierarchicalClusterSelectionPlugin

./: CMakeLists.txt  README.md  conanfile.py
.github/workflows/: build.yml
src/: HierarchicalClusterSelectionPlugin.cpp  HierarchicalClusterSelectionPlugin.h  HierarchicalClusterSelectionPlugin.json  PluginAction.cpp  PluginAction.h  SelectedDatasetsAction.cpp  SelectedDatasetsAction.h  SettingsAction.cpp  SettingsAction.h
